--- a/index.html
+++ b/index.html
@@ -5,11 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carosello Mono Array</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
     <div class="container">
+
+       <div class="cornice">
+
+            <img src="img/01.webp" alt="immagine esercizio">
+
+            <button id="button-up" type="button"><i class="fa-solid fa-chevron-up"></i></button>
+
+            <button id="button-down" type="button"><i class="fa-solid fa-chevron-down"></i></button>
+
+       </div>
 
     </div>
     <script type="javascript/text" src="JS/main.js"></script>
