In teoria milestone 2

--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
 <body>
     <div class="container">
 
-       <div class="cornice">
-
-            <img src="img/01.webp" alt="immagine esercizio">
+       <div class="cornice" id="cornice">
 
             <button id="button-up" type="button"><i class="fa-solid fa-chevron-up"></i></button>
 
             <button id="button-down" type="button"><i class="fa-solid fa-chevron-down"></i></button>
 
+            <img id="foto" alt="Immagine esercizio">
        </div>
 
     </div>
