--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
        </div>
 
     </div>
-    <script type="javascript/text" src="JS/main.js"></script>
+    <script type="text/javascript" src="JS/main.js"></script>
 </body>
 </html>
