Arrivato fino alla "milestone 2" del bonus

--- a/index.html
+++ b/index.html
@@ -10,16 +10,26 @@
     <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
-    <div class="container">
 
-       <div class="cornice" id="cornice">
+    <div class="container mt-5 pt-5">
+
+        <div class="row mt-5 g-0 position-relative">
+
+            <div class="col-8 offset-1">
+
+                <img class="w-100" id="foto" alt="Immagine esercizio">
+
+            </div>
+
+            <div class="col-2 laterale" id="laterale">
+
+            </div>
 
             <button id="button-up" type="button"><i class="fa-solid fa-chevron-up"></i></button>
 
             <button id="button-down" type="button"><i class="fa-solid fa-chevron-down"></i></button>
 
-            <img id="foto" alt="Immagine esercizio">
-       </div>
+        </div>
 
     </div>
     <script type="text/javascript" src="JS/main.js"></script>
